--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,10 @@
 ---
 
+# Install
+manala_sudo_install_packages: ~
+manala_sudo_install_packages_default:
+  - sudo
+
 # Sudoers
 manala_sudo_sudoers_exclusive: false
 manala_sudo_sudoers_dir:       /etc/sudoers.d
