[Sudo] Better sudoers exclusive handling

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,4 +8,5 @@ manala_sudo_install_packages_default:
 # Sudoers
 manala_sudo_sudoers_exclusive: false
 manala_sudo_sudoers_dir:       /etc/sudoers.d
+manala_sudo_sudoers_template:  ~
 manala_sudo_sudoers:           []
