--- a/tasks/sudoers.yml
+++ b/tasks/sudoers.yml
@@ -1,25 +1,49 @@
 ---
 
-- name: sudoers > Templates
-  template:
-    src:  "{{ item.template|default('sudoers/empty.j2') }}"
-    dest: "{{ manala_sudo_sudoers_dir }}/{{ item.file }}"
-    mode: 0440
-  with_items: "{{ manala_sudo_sudoers }}"
+- name: sudoers > Directory
+  file:
+    path: "{{ manala_sudo_sudoers_dir }}"
+    state: directory
+  when: manala_sudo_sudoers|length
 
-- name: sudoers > Exclusive - find files
-  command: "find -type f \\( ! -iname 'README' \\) -printf '%P\n'"
-  args:
-    chdir: "{{ manala_sudo_sudoers_dir }}"
+- name: sudoers > Exclusive
+  find:
+    path: "{{ manala_sudo_sudoers_dir }}"
+    excludes: README
   changed_when: false
-  register: __manala_sudo_sudoers_find_output
+  register: __manala_sudo_sudoers_exclusive_find
   when: manala_sudo_sudoers_exclusive
 
-- name: sudoers > Exclusive - remove files
+- name: sudoers > Templates presents
+  template:
+    src:  "{{ item.template|default(manala_sudo_sudoers_template|ternary(manala_sudo_sudoers_template, 'sudoers/empty.j2')) }}"
+    dest: "{{ item.file }}"
+    mode: 0440
+  with_items: "{{ lookup(
+      'manala_sudo_sudoers',
+      manala_sudo_sudoers,
+      __manala_sudo_sudoers_exclusive_find.files|default([]),
+      manala_sudo_sudoers_dir,
+      wantlist=True,
+      wantstate='present'
+    )
+  }}"
+  notify:
+    - sudo restart
+
+# Ansible template module does not support "state" parameter (see: https://github.com/ansible/ansible/issues/29781)
+- name: sudoers > Files absents
   file:
-    path:  "{{ manala_sudo_sudoers_dir }}/{{ item }}"
+    path:  "{{ item.file }}"
     state: absent
-  when: manala_sudo_sudoers_exclusive and (item not in manala_sudo_sudoers|map(attribute='file'))
-  with_items: "{{ __manala_sudo_sudoers_find_output.stdout_lines|default([]) }}"
+  with_items: "{{ lookup(
+      'manala_sudo_sudoers',
+      manala_sudo_sudoers,
+      __manala_sudo_sudoers_exclusive_find.files|default([]),
+      manala_sudo_sudoers_dir,
+      wantlist=True,
+      wantstate='absent'
+    )
+  }}"
   notify:
     - sudo restart
