--- a/tests/0200_sudoers.goss.2.yml
+++ b/tests/0200_sudoers.goss.2.yml
@@ -3,7 +3,13 @@
 file:
   /etc/sudoers.d.test/foo:
     exists: true
+    owner: root
+    group: root
+    mode: "0440"
   /etc/sudoers.d.test/bar:
     exists: false
   /etc/sudoers.d.test/baz:
     exists: true
+    owner: root
+    group: root
+    mode: "0440"
