--- a/tests/0100_install.yml
+++ b/tests/0100_install.yml
@@ -3,8 +3,12 @@
 - name: "{{ test }}"
   hosts: debian
   become: true
-  roles:
-    - manala.sudo
-  post_tasks:
-    - name: Goss
-      command: goss --gossfile {{ test }}.goss.yml validate
+  tasks:
+
+    - block:
+        - import_role:
+            name: manala.sudo
+      always:
+        - name: Goss
+          command: >
+            goss --gossfile {{ test }}.goss.yml validate
